[gd_scene load_steps=19 format=3 uid="uid://dpqvcimetovs1"]

[ext_resource type="Script" path="res://moth.gd" id="1_v17xx"]
[ext_resource type="Texture2D" uid="uid://3p8lqt7rd7cp" path="res://Assets/sprites/Enemies/mothmove/mothmove_0000.png" id="2_xivdt"]
[ext_resource type="Texture2D" uid="uid://cc44vphrgh4dp" path="res://Assets/sprites/Enemies/mothmove/mothmove_0001.png" id="3_j34ar"]
[ext_resource type="Texture2D" uid="uid://cigafwk42kxdf" path="res://Assets/sprites/Enemies/mothmove/mothmove_0002.png" id="4_vuaub"]
[ext_resource type="Texture2D" uid="uid://clp5hxbgedqn2" path="res://Assets/sprites/Enemies/mothmove/mothmove_0003.png" id="5_4hqdu"]
[ext_resource type="Texture2D" uid="uid://cm1qudfpqi238" path="res://Assets/sprites/Enemies/mothmove/mothmove_0004.png" id="6_li3me"]
[ext_resource type="Texture2D" uid="uid://b0tin5uja36n8" path="res://Assets/sprites/Enemies/mothmove/mothmove_0005.png" id="7_1bud8"]
[ext_resource type="Texture2D" uid="uid://bwkq6lc2rsgrn" path="res://Assets/sprites/Enemies/mothmove/mothmove_0006.png" id="8_msd1x"]
[ext_resource type="Texture2D" uid="uid://cvxkaeqydnku3" path="res://Assets/sprites/Enemies/mothmove/mothmove_0007.png" id="9_objkw"]
[ext_resource type="Texture2D" uid="uid://dr3f5nc438hv2" path="res://Assets/sprites/Enemies/mothmove/mothmove_0008.png" id="10_lswky"]
[ext_resource type="Texture2D" uid="uid://duv3avphrtenf" path="res://Assets/sprites/Enemies/mothmove/mothmove_0009.png" id="11_w2377"]
[ext_resource type="Script" path="res://mothkid_sfx.gd" id="12_vs5pm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s6gxr"]
radius = 337.073

[sub_resource type="CircleShape2D" id="CircleShape2D_842b3"]
radius = 24.0208

[sub_resource type="CircleShape2D" id="CircleShape2D_h7qtx"]
radius = 18.0278

[sub_resource type="SpriteFrames" id="SpriteFrames_m2e8d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_xivdt")
}, {
"duration": 1.0,
"texture": ExtResource("3_j34ar")
}, {
"duration": 1.0,
"texture": ExtResource("4_vuaub")
}, {
"duration": 1.0,
"texture": ExtResource("5_4hqdu")
}, {
"duration": 1.0,
"texture": ExtResource("6_li3me")
}, {
"duration": 1.0,
"texture": ExtResource("7_1bud8")
}, {
"duration": 1.0,
"texture": ExtResource("8_msd1x")
}, {
"duration": 1.0,
"texture": ExtResource("9_objkw")
}, {
"duration": 1.0,
"texture": ExtResource("10_lswky")
}, {
"duration": 1.0,
"texture": ExtResource("11_w2377")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtvym"]
bg_color = Color(0.469605, 0.190438, 0.214815, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rg0w7"]
bg_color = Color(0.830492, 0.2944, 0.31053, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 0)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Moth" type="CharacterBody2D" groups=["enemy"]]
z_index = 1
collision_layer = 2
collision_mask = 2
script = ExtResource("1_v17xx")

[node name="SenseArea" type="Area2D" parent="."]
collision_mask = 3

[node name="SenseCollision" type="CollisionShape2D" parent="SenseArea"]
shape = SubResource("CircleShape2D_s6gxr")

[node name="HitArea" type="Area2D" parent="."]
collision_mask = 3

[node name="HitCollision" type="CollisionShape2D" parent="HitArea"]
shape = SubResource("CircleShape2D_842b3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_h7qtx")

[node name="MothSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_m2e8d")
frame_progress = 0.110249

[node name="HpBar" type="ProgressBar" parent="."]
offset_left = -28.0
offset_top = -38.0
offset_right = 82.0
offset_bottom = -19.0
scale = Vector2(0.5, 0.5)
theme_override_styles/background = SubResource("StyleBoxFlat_rtvym")
theme_override_styles/fill = SubResource("StyleBoxFlat_rg0w7")
value = 20.0
show_percentage = false

[node name="MothkidSfx" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0
max_distance = 1000.0
script = ExtResource("12_vs5pm")

[connection signal="body_entered" from="SenseArea" to="." method="_on_sense_area_body_entered"]
[connection signal="body_exited" from="SenseArea" to="." method="_on_sense_area_body_exited"]
[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
[connection signal="body_exited" from="HitArea" to="." method="_on_hit_area_body_exited"]
